--- a/powerblog/members/templates/registration/edit_profile.html
+++ b/powerblog/members/templates/registration/edit_profile.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 {% if user.is_authenticated %}
-        <h1>Update Profile</h1>
+        <h1>User Settings</h1>
 
         <br>
         <div class="form-group">
