--- a/powerblog/theblog/templates/article_details.html
+++ b/powerblog/theblog/templates/article_details.html
@@ -38,6 +38,7 @@
     - {{ total_likes }} Likes
 </form>
 
+
 <br>
 
 <div class="card mb-3" style="max-width: 540px;">
@@ -51,7 +52,11 @@
         </div>
         <div class="col-md-8">
             <div class="card-body">
-                <h5 class="card-title">{{post.author.first_name}} {{post.author.last_name}}</h5>
+                <h5 class="card-title">
+                    <a href="{% url 'show_profile_page' post.author.profile.id%}">
+                        {{post.author.first_name}} {{post.author.last_name}}
+                    </a>
+                </h5>
                 <p class="card-text"><small class="text-body-secondary">
                         <a href="mailto:{{post.author.email}}">{{post.author.email}}</a>
                     </small></p>
@@ -88,6 +93,40 @@
     </div>
 </div>
 
+<br>
+
+
+<h3>Comments</h3>
+{% if not post.comments.all %}
+    No Comments Here...
+    <a href="{% url 'add_comment' post.pk %}">Add One</a>
+{% else %}
+    <a href="{% url 'add_comment' post.pk %}">Add Comment</a>
+    <br>
+    {% for comment in post.comments.all %} 
+    <hr>
+    <!-- Comment -->
+    <strong>{{comment.name}} - {{comment.date_added}}</strong>
+    <br>
+    {{comment.body}}
+    <br>
+    <!-- <a href="">Reply</a>
+    <hr> -->
+    <!-- End Comment -->
+    {% endfor %}
+{% endif %}
+<br>
+<!-- <form action="{% url 'add_comment' post.pk %}" method="POST">
+    {% csrf_token %}
+    <div class="form-group">
+        <label for="name">Name:</label>
+        <input type="text" name="name" placeholder="Enter Name" class="form-control">
+    </div>
+    <div class="form-group">
+        <label for="body">Comment:</label>
+        <textarea name="body" id="" cols="30" rows="10" class="form-control"></textarea>
+    </div>
+    <button type="submit" class="btn btn-success">Add Comment</button> -->
 
 
 
