--- a/powerblog/members/templates/registration/login.html
+++ b/powerblog/members/templates/registration/login.html
@@ -23,7 +23,7 @@
     {% load socialaccount %}
     <h1>Google Login</h1>
     <p>Login using your Google account</p>
-    <a href="{% provider_login_url 'google' next='home'%}" class="btn btn-warning">
+    <a href="{% provider_login_url 'google'%}" class="btn btn-warning">
         Login with Google
     </a>
     <!-- <button class="btn btn-outline-info">
