--- a/powerblog/members/templates/registration/edit_profile.html
+++ b/powerblog/members/templates/registration/edit_profile.html
@@ -14,6 +14,8 @@
                 <button type="submit" class="btn btn-success">Submit</button>
             </form>
         </div>
+        <a href="{% url 'deactivate_google' %}">Deactivate Google Account</a>
+
 {% else %}
 
 <h1>Not Logged In</h1>
