--- a/powerblog/theblog/templates/base.html
+++ b/powerblog/theblog/templates/base.html
@@ -75,6 +75,19 @@
               <li><a class="dropdown-item" href="{% url 'create_profile_page' %}">Create Profile</a></li>
               {% endif %}
               <li>
+                <hr class="dropdown-divider">
+                {% if user.profile.stripe_customer_id %}
+                <form action="{% url 'create_billing_portal_session' %}" method="post">
+                  {% csrf_token %}
+                  <button type="submit" class="dropdown-item">Manage Billing</button>
+                </form>
+                <form action="{% url 'subscription_details' %}" method="post">
+                  {% csrf_token %}
+                  <button type="submit" class="dropdown-item">Subscription Details</button>
+                </form>
+                {% endif %}
+              </li>
+              <li>
                 <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
               </li>
             </ul>
@@ -83,8 +96,12 @@
           {% endif %}
           <li class="nav-item">
             <form class="container-fluid justify-content-start">
+              {% if not user.profile.stripe_customer_id %}
+              {% if user.is_authenticated %}
               <a class="btn btn-outline-warning me-2" type="button" href="{% url 'subscribe'%}">Get a Subscription</a>
+              {% endif %}
               <a class="btn btn-outline-light me-2" type="button" href="{% url 'payment'%}">Donate</a>
+              {% endif %}
             </form>
           </li>
         </ul>
